<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HistoryActivity"
    android:id="@+id/HR_Main_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_filter_all"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_fAll" />

                <Button
                    android:id="@+id/btn_filter_exp"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_fExp" />

                <Button
                    android:id="@+id/btn_filter_inc"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_fInc" />

                <Button
                    android:id="@+id/btn_clear_hist"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/btn_clearHist" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/l_history_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_hNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/item1_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:id="@+id/tv_hrType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/item2_text"
                    app:layout_constraintStart_toEndOf="@id/tv_hNum"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:id="@+id/tv_hrName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/item3_text"
                    app:layout_constraintStart_toEndOf="@id/tv_hrType"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_hAmount"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/tv_hAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/item4_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_hrName"
                    android:layout_marginStart="25dp"/>
                <TextView
                    android:id="@+id/tv_hDt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/item5_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_hAmount"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck">


                <LinearLayout
                    android:id="@+id/HR_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
        </ScrollView>
</LinearLayout>