<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/type_cost_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:text="@string/expenses"
        android:textColor="@color/for_exp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/select_label"
        app:layout_constraintTop_toBottomOf="@id/app_desc_label"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <ImageButton
        android:id="@+id/settings_btn"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/img_desc"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_settings_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linear_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_label"
        app:layout_constraintBottom_toTopOf="@id/linear_container2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/type_exp1"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/type_exp2"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/type_exp3"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linear_container3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/type_exp4"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/type_exp5"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/type_exp6"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_container3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linear_container4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/type_exp7"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/type_exp8"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/type_exp9"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_container4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_container3"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/type_exp10"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/type_exp11"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/type_exp12"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_container5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_container4"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/type_exp13"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/type_exp14"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/type_exp15"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text=""
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/commit_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="190dp"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:hint="@string/type_amount"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/tv_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/for_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/app_desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_app_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:text="@string/app_desc"/>
    <TextView
        android:id="@+id/balance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/other_label_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:text="@string/balance"/>
    <TextView
        android:id="@+id/balance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/other_label_tv"
        app:layout_constraintStart_toEndOf="@id/balance_label"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:text="@string/tmp_for_balance" />
    <Button
        android:id="@+id/commit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etAmount"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="190dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/bnt_commit_e"/>
    <EditText
        android:id="@+id/etBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_label"
        android:layout_marginStart="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:hint="@string/enter_balance"
        android:textAlignment="center"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/balance_ok_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/etBalance"
        app:layout_constraintTop_toBottomOf="@id/balance_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:text="@string/btn_ok"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/hist_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/for_hist_btn"/>

    <TextView
        android:id="@+id/select_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/select"
        android:textColor="@color/for_select"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/type_cost_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_desc_label"
        tools:ignore="TextContrastCheck" />
    <TextView
        android:id="@+id/bad_habits_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/habits"/>
    <TextView
        android:id="@+id/bad_habits_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/bad_habits_label_tv"
        app:layout_constraintTop_toBottomOf="@id/commit_btn"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/tmp_for_balance"/>
    <TextView
        android:id="@+id/fast_food_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bad_habits_label_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/f_food"/>
    <TextView
        android:id="@+id/fast_food_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/fast_food_label_tv"
        app:layout_constraintTop_toBottomOf="@id/bad_habits_label_tv"
        android:layout_marginStart="16dp"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/tmp_for_balance"/>
    <TextView
        android:id="@+id/gasoline_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fast_food_label_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/gas"/>
    <TextView
        android:id="@+id/gasoline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/gasoline_label_tv"
        app:layout_constraintTop_toBottomOf="@id/fast_food_label_tv"
        android:layout_marginStart="16dp"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/tmp_for_balance"/>
    <TextView
        android:id="@+id/payments_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gasoline_label_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/pay"/>
    <TextView
        android:id="@+id/payments_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/payments_label_tv"
        app:layout_constraintTop_toBottomOf="@id/gasoline_label_tv"
        android:layout_marginStart="16dp"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/tmp_for_balance"/>
    <TextView
        android:id="@+id/services_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payments_label_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/serv"/>
    <TextView
        android:id="@+id/services_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/services_label_tv"
        app:layout_constraintTop_toBottomOf="@id/payments_label_tv"
        android:layout_marginStart="16dp"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/tmp_for_balance"/>
    <TextView
        android:id="@+id/other_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/services_label_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/s_other"/>
    <TextView
        android:id="@+id/other_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/other_label_tv"
        app:layout_constraintTop_toBottomOf="@id/services_label_tv"
        android:layout_marginStart="16dp"
        android:textColor="@color/for_exp"
        android:textSize="20sp"
        android:text="@string/tmp_for_balance"/>


</androidx.constraintlayout.widget.ConstraintLayout>